--- a/knative/eventing-core-v0_22_0.yaml
+++ b/knative/eventing-core-v0_22_0.yaml
@@ -788,42 +788,42 @@ spec:
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
----
-apiVersion: autoscaling/v2beta2
-kind: HorizontalPodAutoscaler
-metadata:
-  name: eventing-webhook
-  namespace: knative-eventing
-  labels:
-    eventing.knative.dev/release: "v0.22.0"
-spec:
-  scaleTargetRef:
-    apiVersion: apps/v1
-    kind: Deployment
-    name: eventing-webhook
-  minReplicas: 1
-  maxReplicas: 5
-  metrics:
-    - type: Resource
-      resource:
-        name: cpu
-        target:
-          type: Utilization
-          averageUtilization: 100
+# ---
+# apiVersion: autoscaling/v2beta2
+# kind: HorizontalPodAutoscaler
+# metadata:
+#   name: eventing-webhook
+#   namespace: knative-eventing
+#   labels:
+#     eventing.knative.dev/release: "v0.22.0"
+# spec:
+#   scaleTargetRef:
+#     apiVersion: apps/v1
+#     kind: Deployment
+#     name: eventing-webhook
+#   minReplicas: 1
+#   maxReplicas: 5
+#   metrics:
+#     - type: Resource
+#       resource:
+#         name: cpu
+#         target:
+#           type: Utilization
+#           averageUtilization: 100
 ---
 # Webhook PDB.
-apiVersion: policy/v1beta1
-kind: PodDisruptionBudget
-metadata:
-  name: eventing-webhook
-  namespace: knative-eventing
-  labels:
-    eventing.knative.dev/release: "v0.22.0"
-spec:
-  minAvailable: 80%
-  selector:
-    matchLabels:
-      app: eventing-webhook
+# apiVersion: policy/v1beta1
+# kind: PodDisruptionBudget
+# metadata:
+#   name: eventing-webhook
+#   namespace: knative-eventing
+#   labels:
+#     eventing.knative.dev/release: "v0.22.0"
+# spec:
+#   minAvailable: 80%
+#   selector:
+#     matchLabels:
+#       app: eventing-webhook
 
 # Copyright 2018 The Knative Authors
 #
@@ -849,8 +849,8 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: eventing-webhook
-      role: eventing-webhook
+      app: "eventing-webhook"
+      role: "eventing-webhook"
   template:
     metadata:
       labels:
@@ -973,7 +973,7 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  creationTimestamp: null
+  # creationTimestamp: null
   labels:
     eventing.knative.dev/release: "v0.22.0"
     eventing.knative.dev/source: "true"
