--- a/argocd-applications/istio-resources.yaml
+++ b/argocd-applications/istio-resources.yaml
@@ -6,11 +6,11 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/kubeflow/manifests.git
+    repoURL: https://github.com/ybudnyi/manifests.git
     targetRevision: HEAD
     path: common/istio-1-16/kubeflow-istio-resources/base
     kustomize:
-      version: v4.0.5
+
   destination:
     server: https://kubernetes.default.svc
   syncPolicy:
