--- a/argocd-applications/pipelines.yaml
+++ b/argocd-applications/pipelines.yaml
@@ -6,11 +6,11 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/kubeflow/manifests.git
+    repoURL: https://github.com/ybudnyi/manifests.git
     targetRevision: HEAD
     path: apps/pipeline/upstream/env/cert-manager/platform-agnostic-multi-user
     kustomize:
-      version: v4.0.5
+
   destination:
     server: https://kubernetes.default.svc
   syncPolicy:
