--- a/argocd-applications/istio-resources.yaml
+++ b/argocd-applications/istio-resources.yaml
@@ -10,7 +10,7 @@ spec:
     targetRevision: HEAD
     path: common/istio-1-16/kubeflow-istio-resources/base
     kustomize:
-
+      version:
   destination:
     server: https://kubernetes.default.svc
   syncPolicy:
