--- a/argocd-applications/tensorboard-controller.yaml
+++ b/argocd-applications/tensorboard-controller.yaml
@@ -10,7 +10,7 @@ spec:
     targetRevision: HEAD
     path: apps/tensorboard/tensorboard-controller/upstream/overlays/kubeflow
     kustomize:
-
+      version:
   destination:
     server: https://kubernetes.default.svc
   syncPolicy:
