--- a/argocd-applications/admision-webhook.yaml
+++ b/argocd-applications/admision-webhook.yaml
@@ -6,11 +6,11 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/ybudnyi/manifests.git
+    repoURL: https://github.com/kubeflow/manifests.git
     targetRevision: HEAD
     path: apps/admission-webhook/upstream/overlays/cert-manager
     kustomize:
-
+      version: v5.0.0
   destination:
     server: https://kubernetes.default.svc
   syncPolicy:
