--- a/argocd-applications/cert-manager-issuer.yaml
+++ b/argocd-applications/cert-manager-issuer.yaml
@@ -10,7 +10,7 @@ spec:
     targetRevision: HEAD
     path: common/cert-manager/kubeflow-issuer/base
     kustomize:
-
+      version: v5.0.0
   destination:
     server: https://kubernetes.default.svc
   syncPolicy:
