--- a/argocd-applications/dex-istio.yaml
+++ b/argocd-applications/dex-istio.yaml
@@ -10,7 +10,7 @@ spec:
     targetRevision: HEAD
     path: common/dex/overlays/istio
     kustomize:
-
+      version: v5.0.0
   destination:
     server: https://kubernetes.default.svc
   syncPolicy:
