--- a/argocd-applications/knative-istio.yaml
+++ b/argocd-applications/knative-istio.yaml
@@ -10,7 +10,7 @@ spec:
     targetRevision: HEAD
     path: common/istio-1-16/cluster-local-gateway/base
     kustomize:
-
+      version: v5.0.0
   destination:
     server: https://kubernetes.default.svc
   syncPolicy:
