--- a/argocd-applications/profile-controller_access-management.yaml
+++ b/argocd-applications/profile-controller_access-management.yaml
@@ -10,7 +10,7 @@ spec:
     targetRevision: HEAD
     path: apps/profiles/upstream/overlays/kubeflow
     kustomize:
-
+      version: v5.0.0
   destination:
     server: https://kubernetes.default.svc
   syncPolicy:
