--- a/argocd-applications/trainning-operator.yaml
+++ b/argocd-applications/trainning-operator.yaml
@@ -10,7 +10,7 @@ spec:
     targetRevision: HEAD
     path: apps/training-operator/upstream/overlays/kubeflow
     kustomize:
-
+      version: v5.0.0
   destination:
     server: https://kubernetes.default.svc
   syncPolicy:
