--- a/kubeflow.yaml
+++ b/kubeflow.yaml
@@ -10,7 +10,7 @@ spec:
     targetRevision: HEAD
     path: .
     kustomize:
-      version:
+      version: v5.0.0
   destination:
     server: https://kubernetes.default.svc
   syncPolicy:
