--- a/argocd-applications/cert-manager.yaml
+++ b/argocd-applications/cert-manager.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/ybudnyi/manifests.git
+    repoURL: https://github.com/ybudnyi/kubeflow-1.6.git
     targetRevision: HEAD
     path: common/cert-manager/cert-manager/base
     kustomize:
