--- a/argocd-applications/knative-istio.yaml
+++ b/argocd-applications/knative-istio.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/ybudnyi/manifests.git
+    repoURL: https://github.com/ybudnyi/kubeflow-1.6.git
     targetRevision: HEAD
     path: common/istio-1-16/cluster-local-gateway/base
     kustomize:
